# pyproject_template

./: LICENSE  README.md  init.py  mkdocs.yml  pyproject.toml
.github/workflows/: init.yaml  pages.yaml  tests.yaml
docs/javascripts/: mathjax.js
