[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{repo_name}"
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
    {{ name = "{owner_name}", email = "{owner_name}@users.noreply.github.com" }},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "rich"
]
dynamic = ["version"]

[tool.hatch.envs.default.env-vars]
PIP_EXTRA_INDEX_URL = "https://pypi.org/simple/"

[project.urls]
Documentation = "https://{owner_name}.github.io/{repo_name}"
Issues = "https://github.com/{owner_name}/{repo_name}/issues"
Source = "https://github.com/{owner_name}/{repo_name}"

[tool.hatch.version]
path = "{repo_name}/__about__.py"

[tool.hatch.envs.tests]
dependencies = [
    "pytest",
]

[[tool.hatch.envs.test.matrix]]
python = ["311", "312"]

[tool.hatch.envs.docs]
extra-dependencies = [
    "mkdocs-material",
    "mkdocstrings[python]"
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
]